    mcMMO will now be compatible with changes to world height (1.17 compatibility)
    Added missing cooldown locale message 'Commands.Database.Cooldown'
    Added new locale message 'Taming.Summon.COTW.Removed'
    mcMMO will ignore EntityPickupItemEvents from "Fake-Player" NPCs if it recognizes them as such, this will prevent some compatibility issues with some plugins

    NOTES:
    Books dropped before this fix will not be usable and should just be chucked in lava, the broken books have blue names, the working books have yellow names.
    t00thpick1 has taken time to rewrite our block meta tracking system to be more efficient, easier to maintain, and support upcoming features such as world height changes
    This new system is compatible with the old one, it will convert old files to the new format as needed.
    This update shouldn't break anything as the API is the same

Version 2.1.164
    mcMMO will now let players use vanilla blocks that have interactions (such as the vanilla Anvil) which are assigned as either Repair or Salvage blocks if a player is sneaking (see notes)
    The Rarity known as Records has been renamed to Mythic
    Fishing treasures have been moved from treasures.yml -> fishing_treasures.yml, copy over any custom entries you had from treasures.yml carefully as the config file has changed and you can't just copy paste your old entries without making a few edits
    Added Enchanted Books to fishing_treasures.yml as Legendary rarity (can drop with any legal enchantment - see notes)
    Added all Netherite gear to the Mythic rarity in fishing_treasures.yml
    Added Name Tag to fishing_treasures.yml as Rare rarity
    Added Netherite Scrap to fishing_treasures.yml as Legendary rarity
    Added Nautilus Shell to fishing_treasures.yml as Legendary rarity
    Music Disc rarity in fishing_tresures.yml has been broken up across tiers, they will be more common now.